Up2Go-travelexpenses/src/objects/CustomSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>txt_CompensationRateRuleClasses__c</fullName>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ExpenseEntityId__c</fullName>
        <label>Expense Entity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ExpenseRuleClasses__c</fullName>
        <label>ExpenseRule Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_LongDistanceRideRuleClasses__c</fullName>
        <label>LongDistanceRideRule Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_MealInvitationRuleClasses__c</fullName>
        <label>MealInvitationRule Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SaveTravelRuleClasses__c</fullName>
        <label>SaveTravelRule Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SubmitTravelRuleClasses__c</fullName>
        <label>SubmitTravelRule Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TravelExpenseRelationId__c</fullName>
        <label>DEPRECATED</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Up2Go Travel Expenses - Custom Settings</label>
</CustomObject>